--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -2029,7 +2029,7 @@ over50per2 <- readRDS('data/04-over50per2.RDS')
 
 #### Random windows
 
-It is possible that obtaining the population groupings by clustering the most extreme windows for each statistic, could have occurred by chance. To assess this, 10,000 iterations of random resampling of 2500 windows per population was undertaken, and these windows were then clustered. This was done so that the extreme tail clustering could be compared to the random windows to see if the extreme window clustering performed better in exclusivity and proportion of super population clustering than by drawing windows at random. The maximum proportion of populations being clustered into their designated super population was then calculated when the tree was cut to have six groups (K = 6), one for each super population. The mean proportion of populations grouped into their super population was less than 0.5 for all super populations, with an overall mean of 0.282 (Table \@ref(tab:randtab)). This compared to a mean proportion of 0.916 for the clustering of the extreme windows. Other values of K were also tested for K = 9, and K = 11, based on the results of the admixture analysis. They both had higher mean exclusivities (K = 9: 0.367, K = 11: 0.424) than K = 6, due to more possible individual clusters. The extra values of K were selected based on the lowest cross-validation errors for the calculations using all populations, and the calculations omitting the \gls{amr} and \gls{pol} populations (section \@ref(admixture)). The remainder of this section will report on K = 6.
+It is possible that obtaining the population groupings by clustering the most extreme windows for each statistic, could have occurred by chance. To assess this, 10,000 iterations of random resampling of 2500 windows per population was undertaken, and these windows were then clustered. This was done so that the extreme tail clustering could be compared to the random windows to see if the extreme window clustering performed better in exclusivity and proportion of super population clustering than by drawing windows at random. The maximum proportion of populations being clustered into their designated super population was then calculated when the tree was cut to have six groups (K = 6), one for each super population. The mean proportion of populations grouped into their super population was less than 0.5 for all super populations, with an overall mean of 0.282 (Table \@ref(tab:randtab)). This compared to a mean proportion of 0.916 for the clustering of the extreme windows. Based on the results of the admixture analysis, K = 11 was also tested and had higher mean exclusivity (0.424) than K = 6, due to more possible individual clusters. The remainder of this section will report on K = 6.
 <!-- explain CV a little more in a sentence -->
 
 Not a single random draw grouped the all individual populations into all of their respective super populations. Only the populations of the \gls{afr} and \gls{eur} super populations did not each get fully grouped into a cluster. Grouping at least 50% of a super population was at best `r round(rand_tab %>% summarise(max = max(prop50)), digits = 0) %>% pull(max)`% of the draws but for the larger super populations (\gls{afr}, \gls{eas}, \gls{eur}, and \gls{sas}) it was on average `r round(rand_tab %>% filter(!super %in% c('POL','AMR'))%>% summarise(mean = mean(prop50)), digits = 0) %>% pull(mean)`% of the draws. There were only `r over50per %>% NROW() %>% num_to_word()` random draws that had all super populations each having half or more of their individual populations assigned the same group. The mean exclusivity of the random draws was low, ranging from `r min(excl_tab$mean) %>% sprintf('%.2f', .)` to `r max(excl_tab$mean) %>% sprintf('%.2f', .)` and there were no random draws in which the Polynesian populations were all grouped together as a Polynesian exclusive cluster.
