slight rephrasings and fixes in order to compile

--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -885,7 +885,7 @@ write.csv(file ='Appendices/04-ze-pol-firstper-genes.csv', x = ze_neg_pol_genes,
 #ze_neg_pol_genes %>% filter( SYMBOL %in% genelists$genename) %>% select(contains('chrom'),SYMBOL, ALLsum, AFRsum, EURsum, SASsum, EASsum, POLsum, contains("EAS"), contains("POL")) %>% arrange(desc(POLsum)) %>% pull(SYMBOL) %>% unique() %>% length()
 
 # get the genes that were in windows that the Pol pops weren't in
-ze_no_pol_genes <- txdb_gene_annotate(create_sums('ze_neg') %>% filter(POLsum == 0) %>% mutate(chrom = paste0('chr', chrom)) %>% GenomicRanges::GRanges()) %>% pull(SYMBOL) %>% unique()
+ze_neg_no_pol_genes <- txdb_gene_annotate(create_sums('ze_neg') %>% filter(POLsum == 0) %>% mutate(chrom = paste0('chr', chrom)) %>% GenomicRanges::GRanges()) %>% pull(SYMBOL) %>% unique()
 # find how many genes were only found with the Pols + others
 #ze_neg_pol_genes %>% filter(!SYMBOL %in% ze_no_pol_genes, SYMBOL %in% genelists$genename) %>% pull(SYMBOL) %>% unique() %>% length()
 ```
@@ -912,9 +912,9 @@ write.csv(file ='Appendices/04-ze-pol-ninetyninethper-genes.csv', x = ze_pos_pol
 #ze_pos_pol_genes %>% filter( SYMBOL %in% genelists$genename) %>% select(contains('chrom'),SYMBOL, ALLsum, AFRsum, EURsum, SASsum, EASsum, POLsum, contains("EAS"), contains("POL")) %>% arrange(desc(POLsum)) %>% pull(SYMBOL) %>% unique() %>% length()
 
 # get the genes that were in windows that the Pol pops weren't in
-ze_no_pol_genes <- txdb_gene_annotate(create_sums('ze_pos') %>% filter(POLsum == 0) %>% mutate(chrom = paste0('chr', chrom)) %>% GenomicRanges::GRanges()) %>% pull(SYMBOL) %>% unique()
+ze_pos_no_pol_genes <- txdb_gene_annotate(create_sums('ze_pos') %>% filter(POLsum == 0) %>% mutate(chrom = paste0('chr', chrom)) %>% GenomicRanges::GRanges()) %>% pull(SYMBOL) %>% unique()
 # find how many genes were only found with the Pols + others
-#ze_pos_pol_genes %>% filter(!SYMBOL %in% ze_no_pol_genes, SYMBOL %in% genelists$genename) %>% pull(SYMBOL) %>% unique() %>% length()
+#ze_pos_pol_genes %>% filter(!SYMBOL %in% ze_pos_no_pol_genes, SYMBOL %in% genelists$genename) %>% pull(SYMBOL) %>% unique() %>% length()
 ```
 
 
@@ -936,9 +936,6 @@ ze_met$pos_not_only_pol <-  ze_pos_pol_genes %>% filter( SYMBOL %in% genelists$g
 
 There were `r ze_neg_pol_genes %>% filter(SYMBOL %in% genelists$genename) %>% pull(SYMBOL) %>% unique() %>% length()` genes that were in the list of genes of metabolic disease associated genes and also had windows in the 1^st^ percentile, that intersected them from the Polynesian populations. Some examples of these genes are _MACF1_, _AGBL4_, _DACH1_, and _RBMS1_. _MACF1_ had windows that were in the 1^st^ percentile of all populations. _AGBL4_ and _DACH1_ had windows in nearly every population except for most \gls{afr} populations. _RBMS1_ was only in the 1^st^ percentile for the Western Polynesian populations \gls{sam} and \gls{ton}. Windows of the 99^th^ percentile in the Polynesian populations that intersected the metabolic disease associated genes tended to also be found in the populations of \gls{eas}, and many also were in common with all other populations but not many were in common with the \gls{afr} populations. There were `r ze_pos_pol_genes %>% filter(SYMBOL %in% genelists$genename) %>% pull(SYMBOL) %>% unique() %>% length()` of genes that were in the 99^th^ percentile for Polynesians. Some examples were _CHST8_, _ERBB4_, _FHIT_, _PTPRD_, and _HMGA2_. _CHST8_ had windows that were in the 99^th^ percentile for the four Polynesian populations, as well as the populations of \gls{eas} with a couple of populations of both \gls{sas} and \gls{eur} too. _ERBB4_ had windows that were in both \gls{pol} and \gls{eas} populations. _FHIT_ had windows for the Western Polynesian populations, \gls{sam} and \gls{ton} and most of the populations from \gls{eas} and \gls{sas}. _PTPRD_ had windows from the Eastern Polynesian populations of \gls{cim} and \gls{nzm}, these windows were also in common with populations mostly from \gls{eur}, while some other windows were in common with the Eastern Polynesian populations and \gls{afr}. _HMGA2_ had windows in all of the super populations except \gls{afr}.
 
-```{r}
-
-```
 
 
 \FloatBarrier
@@ -1081,7 +1078,7 @@ nsl_tot_pol_region_in_common <- (sum(GenomicRanges::width(GenomicRanges::reduce(
 
 The clustering results using regions of significant \gls{nsl} gave the same groupings as \gls{ihs} (Figure \@ref(fig:nslclust)). This similarity was also seen with the differences in individual populations, where \gls{nzc} and \gls{gbr} had the highest percentage of shared regions at `r sprintf("%.1f",mat_nsl['EUR_NZC','EUR_GBR'] *100)`%. \Gls{nzm} and \gls{beb} shared the lowest percentage of regions at `r sprintf("%.1f",mat_nsl['POL_NZM','SAS_BEB'] *100)`%. The percentage of the significant \gls{nsl} regions the Polynesian populations shared with AMR was `r nsl_amr_pol_region_share`%, AFR  was `r nsl_afr_pol_region_share`%, EAS   was `r nsl_eas_pol_region_share`%, EUR was `r nsl_eur_pol_region_share`%, and SAS was `r nsl_sas_pol_region_share`%. This was lower than the mean (`r sprintf("%.1f",mean_super_share_nsl * 100)`%) proportion of region sharing between super populations. The Polynesian populations were clustered together with a high proportion of shared significant regions. The Eastern Polynesians had on average `r nsl_east_pol_region_share`% in common. NZM shared `r (mat_nsl[rownames(mat_nsl) == "POL_CIM", colnames(mat_nsl) == "POL_NZM"] * 100) %>% sprintf('%.1f',.)`% of regions with CIM, whereas CIM shared `r (mat_nsl[rownames(mat_nsl) == "POL_NZM", colnames(mat_nsl) == "POL_CIM"] * 100) %>% sprintf('%.1f',.)`% of regions with NZM. The Western Polynesians had `r mat_nsl %>% data.frame %>% mutate(pop1 = row.names(.))%>% gather("pop2","nsl", 1:(NCOL(.)-1)) %>% filter(pop1!=pop2, (pop1 %in% c("POL_TON","POL_SAM") & pop2 %in% c("POL_TON","POL_SAM"))) %>% summarise(mean(nsl)*100) %>% sprintf('%.1f',.)`% of regions shared on average. SAM shared `r (mat_nsl[rownames(mat_nsl) == "POL_TON", colnames(mat_nsl) == "POL_SAM"] * 100) %>% sprintf('%.1f',.)`% of regions with TON, but TON shared `r (mat_nsl[rownames(mat_nsl) == "POL_SAM", colnames(mat_nsl) == "POL_TON"] * 100) %>% sprintf('%.1f',.)`% of regions with SAM. However, between the Eastern and Western populations, region sharing averaged `r nsl_mean_east_pol__west_pol_region_share`%. Of the regions from all of the Polynesian populations, the Western Polynesian populations made up `r nsl_west_pol_pol_region_share`%. The Eastern Polynesians made up `r nsl_east_pol_pol_region_share`%. The total percentage of regions common for all Polynesian populations was `r nsl_tot_pol_region_in_common`%. This shows that within the Eastern or Western Polynesian groups there was a larger proportion of regions that were similar for significant \gls{nsl}, than between the Eastern and Western groups.
 
-The regions that were in common for significant \gls{nsl} between all of the \gls{pol} populations had 27 genes that intersected. These genes were part of 10 pathways, but none were significantly enriched. Regions that were in common between \gls{nzm} and \gls{cim} had 230 genes that intersected, and were involved with 160 pathways. A single pathway, "Glycosaminoglycan degradation_Homo sapiens_hsa00531", was significantly enriched (adjusted P 9.223x10-3) with four of 19 genes (_HPSE2_, _HYAL1_, _HYAL2_, and _HYAL3_). The regions that were in common between \gls{sam} and \gls{ton} had 319 genes that intersected them. There were 197 pathways that these genes were part of but none were significantly enriched.
+The regions that were in common for significant \gls{nsl} between all of the \gls{pol} populations intersected 27 genes. These genes were part of 10 pathways, but none were significantly enriched. Regions that were in common between \gls{nzm} and \gls{cim} had 230 genes that intersected, and were involved with 160 pathways. A single pathway, "Glycosaminoglycan degradation_Homo sapiens_hsa00531", was significantly enriched (adjusted P 9.223x10-3) with four of 19 genes (_HPSE2_, _HYAL1_, _HYAL2_, and _HYAL3_). The regions that were in common between \gls{sam} and \gls{ton} intersected 319 genes. There were 197 pathways that these genes were part of but none were significantly enriched.
 
 
 ```{r, eval = FALSE}
@@ -1191,7 +1188,8 @@ n_disease_pol_kd <- NROW(GenomicRanges::reduce(IRanges::subsetByOverlaps(c(gr[gr
 n_disease_pol_metsyn <- NROW(GenomicRanges::reduce(IRanges::subsetByOverlaps(c(gr[grep(x = gr$pop, pattern = 'POL')],gr2[grep(x = gr2$pop, pattern = 'POL')]), metsyn_GR)))
 ```
 
-In the clustered-significant regions of both \gls{ihs} and \gls{nsl} there were `r n_regions_ihs_nsl` independent regions that overlapped with genes associated with urate and metabolic diseases from all populations, for Polynesian populations the number of regions was `r n_regions_pol_ihs_nsl`. XXX \gls{ihs} had `r n_regions_ihs` regions, while \gls{nsl} had `r n_regions_nsl`, and in common between the two statistics were `r n_regions_ihs_nsl_intersect` regions. The regions of the Polynesian populations covered `r n_pol_snps_ihs` \glspl{snp} for \gls{ihs} and `r n_pol_snps_nsl` for \gls{nsl}, with `r n_pol_snps_ihs_nsl ` in common between them. For the genes that had significant regions in Polynesian populations, `r n_disease_pol_urate` regions intersected genes that had been associated with urate and gout, `r n_disease_pol_obesity` with obesity, `r n_disease_pol_t2d` with \gls{t2d}, `r n_disease_pol_kd` with kidney disease, and `r n_disease_pol_metsyn` with metabolic syndrome.
+
+In the clustered-significant regions of both \gls{ihs} and \gls{nsl} there were `r n_regions_ihs_nsl` independent regions that overlapped with genes associated with urate and metabolic diseases from all populations, for Polynesian populations the number of regions was `r n_regions_pol_ihs_nsl`. \gls{ihs} had `r n_regions_ihs` regions, while \gls{nsl} had `r n_regions_nsl`, and in common between the two statistics were `r n_regions_ihs_nsl_intersect` regions. The regions of the Polynesian populations covered `r n_pol_snps_ihs` \glspl{snp} for \gls{ihs} and `r n_pol_snps_nsl` for \gls{nsl}, with `r n_pol_snps_ihs_nsl ` in common between them. For the genes that had significant regions in Polynesian populations, `r n_disease_pol_urate` regions intersected genes that had been associated with urate and gout, `r n_disease_pol_obesity` with obesity, `r n_disease_pol_t2d` with \gls{t2d}, `r n_disease_pol_kd` with kidney disease, and `r n_disease_pol_metsyn` with metabolic syndrome.
 
 ```{r, message=FALSE, warning=FALSE}
 shared_ihs_pol_disease_snps <- left_join(bind_rows(disease_ihs_snps) %>% filter(superpop == "POL") %>% select(seqnames, start, end) %>% distinct(), bind_rows(disease_ihs_snps), by =c("seqnames", "start","end")) %>% select(-genename, -width, -strand) %>% distinct() %>% group_by(seqnames, start, end) %>% mutate(n = n()) %>% filter(n > 1) %>% arrange(desc(n))
@@ -1227,12 +1225,12 @@ The \gls{sam} and \gls{ton} populations had multiple \glspl{snp} in common that 
 
 
 
-_ERBB4_ had a single significant \gls{snp}, rs6707285, in \gls{sam}, and was also significant in \gls{pur}, \gls{khv}, \gls{ibs}, \gls{tsi}, and \gls{gbr}. _FHIT_ also had a single significant \gls{snp}, but this was in the \gls{nzm}, \gls{chb}, \gls{chs}, \gls{cdx}, \gls{khv}, and \gls{pel} populations. Of the metabolic disease genes, _ERBB4_ and _FHIT_ were also found by @pickrell2009signals.
+_ERBB4_ had a single significant \gls{snp}, rs6707285, in \gls{sam}, and was also significant in \gls{pur}, \gls{khv}, \gls{ibs}, \gls{tsi}, and \gls{gbr}. _FHIT_ also had a single significant \gls{snp}, but this was in the \gls{nzm}, \gls{chb}, \gls{chs}, \gls{cdx}, \gls{khv}, and \gls{pel} populations. Of the metabolic disease genes, _ERBB4_ and _FHIT_ were also found by @pickrell2009signals in the Human Genome Diversity-CEPH Panel using \gls{ihs} and \gls{xpehh}.
 
 <!-- pickrell ERBB4 in eas, sas, and mideas, oceania. FHIT in bantu -->
 
 
-One of the main regions, chr20:33470694-34556005, had 11 significant \glspl{snp} in Polynesian populations as well as up to 16 other populations, contained the obesity-associated gene _GDF5_ and the neighbouring genes of _CEP250_ and _UQCC1._ The majority of the significant \glspl{snp} were for the ancestral allele. Both rs1570841 and rs4911502 were significant in the populations of \gls{amr} (\gls{clm}, \gls{mxl} and \gls{pur}), \gls{eas} (\gls{cdx}, \gls{chb}, \gls{chs}, \gls{jpt}, and \gls{khv}), \gls{eur} (\gls{ceu}, \gls{fin}, \gls{gbr}, \gls{ibs}), \gls{pol} (\gls{cim}, \gls{nzm}, and \gls{ton}), and \gls{sas} (\gls{beb} and \gls{itu}. Both \glspl{snp} were for the ancestral allele. Four \glspl{snp}, rs4911178, rs4911494, rs6087704, and rs6087704, intersected both _GDF5_ and _UQCC1_, and were significant for the derived alleles in the \gls{cim} and \gls{jpt} populations.
+One of the main regions, chr20:33470694-34556005, had 11 significant \glspl{snp} in Polynesian populations as well as up to 16 other populations, contained the obesity-associated gene _GDF5_ and the neighbouring genes _CEP250_ and _UQCC1._ The majority of the significant \glspl{snp} were for the ancestral allele. Both rs1570841 and rs4911502 were significant in the populations of \gls{amr} (\gls{clm}, \gls{mxl} and \gls{pur}), \gls{eas} (\gls{cdx}, \gls{chb}, \gls{chs}, \gls{jpt}, and \gls{khv}), \gls{eur} (\gls{ceu}, \gls{fin}, \gls{gbr}, \gls{ibs}), \gls{pol} (\gls{cim}, \gls{nzm}, and \gls{ton}), and \gls{sas} (\gls{beb} and \gls{itu}. Both \glspl{snp} were for the ancestral allele. Four \glspl{snp}, rs4911178, rs4911494, rs6087704, and rs6087704, intersected both _GDF5_ and _UQCC1_, and were significant for the derived alleles in the \gls{cim} and \gls{jpt} populations.
 
 <!-- CEP250 -->
 <!--   - rs1570841 3 AMR, 5 EAS, 4 EUR, 3 POL, 2 SAS -ve -->
